k8s/overlays/shambir.site/ingress/ingress-api.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: stocktaking-api-ingress
spec:
  tls:
  - hosts:
    - shambir.site
  rules:
  - host: shambir.site
    http:
      paths:
      - path: /
        backend:
          serviceName: stocktakingbackend
          servicePort: 80
