k8s/overlays/shambir.site/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: stocktaking-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/issuer: letsencrypt-cert-issuer
    certmanager.k8s.io/acme-challenge-type: "http01"
spec:
  tls:
  - hosts:
    - shambir.site
    secretName: stocktaking-cert
  rules:
  - host: shambir.site
    http:
      paths:
      - path: /
        backend:
          serviceName: stocktakingweb
          servicePort: 80
